--- a/k8s/uat/ratings.deployment.yaml
+++ b/k8s/uat/ratings.deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: bookinfo-uat-ratings
-        image: ghcr.io/thongtong/bookinfo-ratings:dev
+        image: ghcr.io/thongtong/bookinfo-ratings:uat
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
