--- a/.github/workflows/deploy-non-prd.yml
+++ b/.github/workflows/deploy-non-prd.yml
@@ -1,7 +1,8 @@
-name: uat-env
+name: deploy-non-prd
 on:
   push:
     branches:
+      - dev
       - master
 jobs:
   build:
@@ -9,7 +10,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Login to GitHub Container Registry
+      - name: Set env
+        run: echo "ENV_NAME=$( [ "$GITHUB_REF" == "refs/heads/master" ] && echo 'uat' || echo ${GITHUB_REF##*/} )" >> $GITHUB_ENV
+
+           - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
@@ -19,11 +23,13 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ghcr.io/thongtong/bookinfo-ratings:uat
+          tags: ghcr.io/thongtong/bookinfo-ratings:${{ env.ENV_NAME }}
   deploy:
     needs: build
     runs-on: ubuntu-20.04
     steps:
+      - name: Set env
+        run: echo "ENV_NAME=$( [ "$GITHUB_REF" == "refs/heads/master" ] && echo 'uat' || echo ${GITHUB_REF##*/} )" >> $GITHUB_ENV
       - name: Checkout code
         uses: actions/checkout@v2
       - name: get-credentials
@@ -36,10 +42,10 @@ jobs:
         uses: deliverybot/helm@v1
         with:
           helm: helm3
-          release: bookinfo-uat-ratings
-          namespace: student28-bookinfo-uat
+          release: bookinfo-${{ env.ENV_NAME }}-ratings
+          namespace: student28-bookinfo-${{ env.ENV_NAME }}
           chart: k8s/helm
-          value-files: k8s/helm-values/values-bookinfo-uat-ratings.yaml
+          value-files: k8s/helm-values/values-bookinfo-${{ env.ENV_NAME }}-ratings.yaml
           values: |
             {
               "extraEnv": {
@@ -50,5 +56,8 @@ jobs:
    needs: deploy
    runs-on: ubuntu-20.04
    steps:
+     - name: Set env
+      run: echo "ENV_NAME=$( [ "$GITHUB_REF" == "refs/heads/master" ] && echo 'uat' || echo ${GITHUB_REF##*/} )" >> $GITHUB_ENV
      - name: Test health service
-       run: curl http://bookinfo.uat.opsta.net/student28/ratings/health | grep "Ratings is working"
+      run: curl http://bookinfo.${{ env.ENV_NAME }}.opsta.net/student28/ratings/health | grep "Ratings is working"
+   
